huge changes, new blog post

--- a/.orator_site/content/404.md
+++ b/.orator_site/content/404.md
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: four hundred and four
+title: four hundred four
 ---
 
-four hundred and four. resource could not be located.
+four hundred four. resource could not be located.
 --------------------------------------------------
 
 I'm sorry.
